--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,21 @@
   ],
   "require": {
     "php": "^7.1.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Symfony\\Bridge\\Doctrine\\": "src/Symfony/Bridge/Doctrine/",
+      "Symfony\\Bridge\\Monolog\\": "src/Symfony/Bridge/Monolog/",
+      "Symfony\\Bridge\\ProxyManager\\": "src/Symfony/Bridge/ProxyManager/",
+      "Symfony\\Bridge\\Twig\\": "src/Symfony/Bridge/Twig/",
+      "Symfony\\Bundle\\": "src/Symfony/Bundle/",
+      "Symfony\\Component\\": "src/Symfony/Component/"
+    }
+  },
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
   }
 }
