--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Matthew Thomas",
+      "name": "Matthew Thomas"
     }
   ],
   "require": {
@@ -13,18 +13,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Symfony\\Bridge\\Doctrine\\": "src/Symfony/Bridge/Doctrine/",
-      "Symfony\\Bridge\\Monolog\\": "src/Symfony/Bridge/Monolog/",
-      "Symfony\\Bridge\\ProxyManager\\": "src/Symfony/Bridge/ProxyManager/",
-      "Symfony\\Bridge\\Twig\\": "src/Symfony/Bridge/Twig/",
-      "Symfony\\Bundle\\": "src/Symfony/Bundle/",
-      "Symfony\\Component\\": "src/Symfony/Component/"
-    }
-  },
-  "minimum-stability": "dev",
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0-dev"
+      "Matt9mg\\Encryption\\": "src/EncryptionBundle/"
     }
   }
 }
