Twig filter added

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -23,3 +23,10 @@ services:
 
   Matt9mg\Encryption\Bridge\Bridge:
     public: true
+
+  Matt9mg\Encryption\Twig\EncryptionExtension:
+    arguments:
+      - '@Matt9mg\Encryption\Bridge\Bridge'
+      - '%matt9mg_doctrine_encryption.class%'
+    tags:
+      - { name: twig.extension }
