--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "php": ">=7"
+    "php": ">=7",
+    "twig/extensions": "^1.5"
   },
   "autoload": {
     "psr-4": {
